<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Activites.LoginActvivty">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/login_img_family"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/login_act_ed_idNum"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/login_ed_shape"
        android:fontFamily="@font/ge_ss_unique_light"
        android:hint="@string/_login_activity_ed_hint_idNum"
        android:inputType="number"
        android:paddingLeft="16dp"
        android:textColorHint="#868383"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_id_number"
        android:paddingRight="16dp"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/login_act_ed_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="right|center_vertical"
        android:textStyle="bold"
        android:textColorHint="#868383"
        android:background="@drawable/login_ed_shape"
        android:fontFamily="@font/ge_ss_unique_light"
        android:hint="@string/_login_activity_ed_hint_password"
        android:paddingLeft="16dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password_"
        android:drawablePadding="8dp"
        android:paddingRight="16dp"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_act_ed_idNum" />


    <Button
        android:id="@+id/login_act_btn_login"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_btn_shape"
        android:fontFamily="@font/ge_ss_unique_light"
        android:text="@string/_login_activity_btn_txt_login"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_act_ed_password" />

    <TextView
        android:id="@+id/login_act_tv_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ge_ss_unique_light"
        android:gravity="center"
        android:text="@string/_login_activity_txt_forget"
        android:textColor="#525151"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_act_btn_login" />



</androidx.constraintlayout.widget.ConstraintLayout>